objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>Created as part of Lead Lightning enablement for LOTUS, DPS-7199</description>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Director / Head</fullName>
                </value>
                <value>
                    <fullName>Employees</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Middle Management</fullName>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_AMI_Territory__c</fullName>
        <formula>Account__r.LCRM_AMI_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LCRM AMI Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_AM_Territory__c</fullName>
        <formula>Account__r.LCRM_AM_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LCRM AM Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Address_Map__c</fullName>
        <formula>if(or(Billing_Street__c = &quot;&quot;, Billing_City__c =&quot;&quot;, Billing_Country__c =&quot;&quot;), &quot;Please Enter the Billing Address, Suburb and Country to see the Map.&quot;, 

HYPERLINK(&quot;https://maps.google.com/maps?saddr=&amp;daddr=&quot;+ Billing_Street__c +&quot;, &quot;+Billing_City__c  +&quot; &quot;+ Billing_State__c +&quot; &quot;+ Billing_Country__c  +&quot;&amp;hl=en&amp;t=m&quot;, 

IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot;+ Billing_Street__c  +&quot;,&quot;+ Billing_City__c  +&quot; &quot;+Billing_State__c +&quot; &quot;+Billing_Country__c  +&quot;&amp;zoom=14&amp;size=400x200&amp;maptype=roadmap&amp;markers=color:red%7C&quot;+ Billing_Street__c   +&quot;,&quot;+ Billing_City__c  +&quot; &quot;+Billing_State__c +&quot; &quot;+Billing_Country__c  , &apos;Map&apos;), &quot;_Blank&quot;) + BR() + &quot;Click to get Directions to this Address&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Consent_To_Landline_Call__c</fullName>
        <description>pulled from contact</description>
        <formula>TEXT(Contact__r.LCRM_Consent_To_Landline_Call__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent To Landline Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Consent_To_Mail__c</fullName>
        <formula>TEXT(Contact__r.LCRM_Consent_To_Mail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent To Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Consent_To_Mobile_Call__c</fullName>
        <formula>TEXT(Contact__r.LCRM_Consent_To_Mobile_Call__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent To Mobile Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Consent_To_SMS__c</fullName>
        <description>pulled from contact</description>
        <formula>TEXT(Contact__r.LCRM_Consent_To_SMS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent To SMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_District__c</fullName>
        <description>Created as part of CRM -13108 to populate District value of the lead owner</description>
        <formula>Owner:User.District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of DPS-20792</description>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Do_Not_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mute Reassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Email_StrikeIron_Validated__c</fullName>
        <formula>if( 
OR(LCRM_Email_Verification__c = &quot;&quot;, CONTAINS(LOWER(LCRM_Email_Verification__c) , &quot;exception&quot;), CONTAINS(LOWER(LCRM_Email_Verification__c) , &quot;pending&quot;)), 
false, 
true
)</formula>
        <label>Email StrikeIron Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Email_Verification_Status__c</fullName>
        <formula>if( 
	OR(CONTAINS(LCRM_Email_Verification__c,&quot;Email Valid&quot;), CONTAINS(LCRM_Email_Verification__c,&quot;Domain Confirmed&quot;)), 
	IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/ok.gif&apos;, &apos;Valid Email&apos;,18,18),
	IF(
		OR(
			LCRM_Email_Verification__c = NULL, 
			LCRM_Email_Verification__c = &apos;&apos; 
		),
		IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/question.png&apos;, &apos;Not Validated&apos;,18,18),
		IF(
			LCRM_Email_Verification__c = &quot;Pending. Please refresh.&quot;,
			IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/LCRM_LoadingImage.jpg&apos;, &apos;Pending&apos;,45,45),
			IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/invalid.gif&apos;, &apos;Invalid Email&apos;,18,18)
		)
	)
)</formula>
        <label>Email Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Email_Verification_TimeStamp__c</fullName>
        <label>Email Verification TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCRM_Email_Verification__c</fullName>
        <label>System Information - DO NOT EDIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Field_Sales_Territory__c</fullName>
        <formula>Account__r.LCRM_Field_Sales_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LCRM Field Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Influence_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Influence Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Integration_Source__c</fullName>
        <label>Integration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Impartner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_LeadAddressText__c</fullName>
        <formula>if(LEN(Billing_Street__c)&gt;0,Billing_Street__c&amp; &quot;, &quot; , &quot;&quot; ) &amp; 
if(LEN(Billing_City__c)&gt;0,Billing_City__c&amp; &quot;, &quot; , &quot;&quot; )&amp; 
if(LEN(Billing_State__c)&gt;0,Billing_State__c&amp; &quot;, &quot; , &quot;&quot; )&amp; 
if(LEN(Billing_Zip__c)&gt;0,Billing_Zip__c&amp; &quot;, &quot; , &quot;&quot; ) &amp;
If(LEN(Billing_Country__c)&gt;0,Billing_Country__c,&quot;&quot;)</formula>
        <label>LeadAddressText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Lead_Owner_TMS_Territory__c</fullName>
        <label>Lead Owner TMS Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Lead_Title__c</fullName>
        <label>Lead Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Mass_Load_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used in loading lead by Informatica or Eloqa Integration users and for assigning Territory to lead by batch class.</description>
        <label>Mass Load Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Mobile_StrikeIron_Validated__c</fullName>
        <formula>if( 
OR(LCRM_Mobile_Verification__c = &quot;&quot;, CONTAINS(LOWER(LCRM_Mobile_Verification__c) , &quot;exception&quot;), CONTAINS(LOWER(LCRM_Mobile_Verification__c) , &quot;pending&quot;)), 
false, 
true 
)</formula>
        <label>Mobile StrikeIron Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Mobile_Verification_Status__c</fullName>
        <formula>if( 
	CONTAINS(LCRM_Mobile_Verification__c, &quot;Valid Number&quot;),
	IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/ok.gif&apos;, &apos;Valid Number&apos;,18,18),
	IF(
		OR(
			LCRM_Mobile_Verification__c = NULL, 
			LCRM_Mobile_Verification__c = &apos;&apos; 
		),
		IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/question.png&apos;, &apos;Not Validated&apos;,18,18),
		IF(
			LCRM_Mobile_Verification__c = &quot;Pending. Please refresh.&quot;,
			IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/LCRM_LoadingImage.jpg&apos;, &apos;Pending&apos;,45,45),
			IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/invalid.gif&apos;, &apos;Invalid Number&apos;,18,18)
		)
	)
)</formula>
        <label>Mobile Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Mobile_Verification_TimeStamp__c</fullName>
        <label>Mobile Verification TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCRM_Mobile_Verification__c</fullName>
        <label>System Information - DO NOT EDIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Phone_StrikeIron_Validated__c</fullName>
        <formula>if( 
OR(LCRM_Phone_Verification__c = &quot;&quot;, CONTAINS(LOWER(LCRM_Phone_Verification__c) , &quot;exception&quot;), CONTAINS(LOWER(LCRM_Phone_Verification__c) , &quot;pending&quot;)), 
false, 
true
)</formula>
        <label>Phone StrikeIron Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Phone_Verification_Status__c</fullName>
        <formula>if( 
	CONTAINS(LCRM_Phone_Verification__c, &quot;Valid Number&quot;),  
	IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/ok.gif&apos;, &apos;Valid Number&apos;,18,18),
	IF(
		OR(
			LCRM_Phone_Verification__c = NULL, 
			LCRM_Phone_Verification__c = &apos;&apos; 
		),
		IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/question.png&apos;, &apos;Not Validated&apos;,18,18),
		IF(
			LCRM_Phone_Verification__c = &quot;Pending. Please refresh.&quot;,
			IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/LCRM_LoadingImage.jpg&apos;, &apos;Pending&apos;,45,45),
			IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/LCRM_StrikeIronImages/invalid.gif&apos;, &apos;Invalid Number&apos;,18,18)
		)
	)
)</formula>
        <label>Phone Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Phone_Verification_TimeStamp__c</fullName>
        <label>Phone Verification TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCRM_Phone_Verification__c</fullName>
        <label>System Information - DO NOT EDIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Print_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for R4</description>
        <label>Print Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Interest__c</fullName>
        <label>Marketing Product interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3E</fullName>
                </value>
                <value>
                    <fullName>3E Budgeting and Forecasting</fullName>
                </value>
                <value>
                    <fullName>3E Data Insights</fullName>
                </value>
                <value>
                    <fullName>3E Image Connect</fullName>
                </value>
                <value>
                    <fullName>3E Templates</fullName>
                </value>
                <value>
                    <fullName>Acritas</fullName>
                </value>
                <value>
                    <fullName>Alteryx</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>BD PREMIER</fullName>
                </value>
                <value>
                    <fullName>Bulletin Pro</fullName>
                </value>
                <value>
                    <fullName>Caselines</fullName>
                    <label>CaseLines</label>
                </value>
                <value>
                    <fullName>Case Logistix</fullName>
                </value>
                <value>
                    <fullName>Case Notebook</fullName>
                </value>
                <value>
                    <fullName>CheckPoint</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>Compliance Learning</fullName>
                </value>
                <value>
                    <fullName>Concourse</fullName>
                    <label>CONCOURSE</label>
                </value>
                <value>
                    <fullName>CONTRACT EXPRESS</fullName>
                </value>
                <value>
                    <fullName>Cosine</fullName>
                </value>
                <value>
                    <fullName>Court Express</fullName>
                </value>
                <value>
                    <fullName>Court management solutions</fullName>
                </value>
                <value>
                    <fullName>C-Track</fullName>
                </value>
                <value>
                    <fullName>CV Mail</fullName>
                </value>
                <value>
                    <fullName>Data Privacy Advisor</fullName>
                </value>
                <value>
                    <fullName>Design Gallery</fullName>
                </value>
                <value>
                    <fullName>Doc Review Services</fullName>
                </value>
                <value>
                    <fullName>Doc Studio/Paperless Proforma</fullName>
                </value>
                <value>
                    <fullName>Drafting Assistant</fullName>
                </value>
                <value>
                    <fullName>EBD Contact Manager</fullName>
                </value>
                <value>
                    <fullName>EBD ContactNet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Referred_By__c</fullName>
        <description>Text field for Elite users</description>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Source_System_Modified_By__c</fullName>
        <label>Source System Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unworked</fullName>
                </value>
                <value>
                    <fullName>Telesales Accepted</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_StrikeIron_Validated__c</fullName>
        <formula>if( 
	AND(
		LCRM_Email_StrikeIron_Validated__c,
		LCRM_Mobile_StrikeIron_Validated__c, 
		LCRM_Phone_StrikeIron_Validated__c
	), 
	true,
	false
)</formula>
        <label>StrikeIron Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Sub_BU__c</fullName>
        <description>Renamed from ‘Sub-BU’ to ‘BU Region’ as part of data segmentation for LOTUS. DPS-1711</description>
        <label>BU Region</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_TMS_Market_Segment_Description__c</fullName>
        <description>Created as part  of CRM -13108 to populate TMS Market Segment value of the lead owner</description>
        <formula>Owner:User.Market_Segment_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMS Market Segment Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_TPS_Screening__c</fullName>
        <description>https://c.cs1.content.force.com/servlet/servlet.FileDownload?file=015S0000000dzO3</description>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+ $Setup.FieldId__c.LCRM_UKI_TPS_Document_Link__c, &quot;TPS Screening&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPS Screening</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Territory_Update_Timestamp__c</fullName>
        <description>This field is used by &apos;LCRMBatchUpdateTMSTerritoryInLead&apos; class to stamp datetime when territory is assigned</description>
        <label>Territory Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCRM_Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTS_LoggedInUser__c</fullName>
        <formula>IF(CreatedById = $User.Id, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTS_LoggedInUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <description>Created as part of email template identification for different language for LOTUS, DPS-5034</description>
        <formula>CASE(Text(Language_Preference__c), &apos;English&apos;, &apos;en_US&apos;, &apos;French-Canadian&apos;, &apos;fr_CA&apos;,&apos;en_US&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <description>Created as part of language identification for LOTUS, DPS-5034</description>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>French-Canadian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date an activity was last logged on the lead.</inlineHelpText>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By_Lead_Owner__c</fullName>
        <label>Last Updated By Lead Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatAm_Created_by_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LatAm_UTM_Campaign__c</fullName>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatAm_UTM_Medium__c</fullName>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatAm_UTM_Source__c</fullName>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Response__c</fullName>
        <description>Field to store error messages coming from Informatica during the Lead assignment process.</description>
        <label>Lead Assignment Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Microsite__c</fullName>
        <label>Lead Microsite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>PWC</fullName>
                </value>
                <value>
                    <fullName>TR Store</fullName>
                </value>
                <value>
                    <fullName>Triform</fullName>
                </value>
                <value>
                    <fullName>Deskcopy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Name_Alias__c</fullName>
        <description>Created as part of Lead Lightning enablement for LOTUS, DPS-1147. Renamed and relabeled as part of DPS-9739</description>
        <label>Lead Name Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Profile_Name__c</fullName>
        <description>This field is used to populate the Lead Owner&apos;s Profile. If Profile matches the Advanced Lead Management Profile, then the Owner receives an Email Notification and Chatter Post</description>
        <formula>Owner:User.Profile.Name</formula>
        <label>Lead Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Queue_Name__c</fullName>
        <description>Field to capture the Lead owner queue name used in the process builder</description>
        <formula>Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to capture the Lead owner queue name used in the process builder</inlineHelpText>
        <label>Lead Owner Queue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_User_Id__c</fullName>
        <description>Lead Owner User Id</description>
        <formula>Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Owner User Id</inlineHelpText>
        <label>Lead Owner User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rating__c</fullName>
        <description>Determines quality of the lead and level of nurturing.</description>
        <label>Lead Rating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TR Store Canada Print</fullName>
                </value>
                <value>
                    <fullName>TR Store US Print</fullName>
                </value>
                <value>
                    <fullName>TR Store Tax Professional</fullName>
                </value>
                <value>
                    <fullName>UE Store Canada PRINT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Scoring_Combined__c</fullName>
        <description>Email automation scoring field combination of attribute and interaction scoring.</description>
        <label>Lead Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Desc__c</fullName>
        <label>Lead Source Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>Only editable by ANZ Eloqua User</description>
        <label>Lead Source-Most Recent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Forms</fullName>
                </value>
                <value>
                    <fullName>Internal Event</fullName>
                </value>
                <value>
                    <fullName>Marketing Event</fullName>
                </value>
                <value>
                    <fullName>Partner Event</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Website – Enquiry Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <description>Used by Eloqua to sort and distribute leads based on qualification</description>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry - Unranked</fullName>
                </value>
                <value>
                    <fullName>Marketing Captured Lead (MCL)</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead (MQL)</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted Lead (SAL)</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead (SQL)</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Tele Accepted</fullName>
                    <label>Tele Accepted Lead (TAL)</label>
                </value>
                <value>
                    <fullName>Tele Qualified</fullName>
                    <label>Tele Qualified Lead (TQL)</label>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>An internal business group within an operating unit</description>
        <inlineHelpText>An internal business group within an operating unit</inlineHelpText>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acritas</fullName>
                </value>
                <value>
                    <fullName>Caselines</fullName>
                    <label>CaseLines</label>
                </value>
                <value>
                    <fullName>Corp-Emerging</fullName>
                </value>
                <value>
                    <fullName>Corp-Global 7</fullName>
                </value>
                <value>
                    <fullName>Corp-Large</fullName>
                </value>
                <value>
                    <fullName>Corporate Counsel</fullName>
                </value>
                <value>
                    <fullName>Corporate Investigative</fullName>
                </value>
                <value>
                    <fullName>Corporate Major Accounts</fullName>
                </value>
                <value>
                    <fullName>Corporate Strategic Accounts</fullName>
                </value>
                <value>
                    <fullName>Corp-SMB</fullName>
                </value>
                <value>
                    <fullName>Corp-Strategic</fullName>
                </value>
                <value>
                    <fullName>eDP</fullName>
                </value>
                <value>
                    <fullName>eDP Migration</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Firm Central</fullName>
                </value>
                <value>
                    <fullName>Govt Investigative</fullName>
                </value>
                <value>
                    <fullName>Govt Legal</fullName>
                </value>
                <value>
                    <fullName>HighQ</fullName>
                </value>
                <value>
                    <fullName>Legal Core</fullName>
                </value>
                <value>
                    <fullName>Litigation Corporate</fullName>
                </value>
                <value>
                    <fullName>Litigation Law Firm</fullName>
                </value>
                <value>
                    <fullName>LLF</fullName>
                </value>
                <value>
                    <fullName>LMLF</fullName>
                </value>
                <value>
                    <fullName>LMLF All Other</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>MLF</fullName>
                </value>
                <value>
                    <fullName>ONESOURCE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pondera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_To_Account__c</fullName>
        <formula>Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDBID__c</fullName>
        <label>MDBID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>